# Chord

./: Cargo.toml  PROMPT-CHORD.md  README.md
chord-core/: Cargo.toml
chord-core/examples/: export_chord_dark.rs
chord-core/src/: config.rs  i18n.rs  lib.rs  profile.rs  theme.rs
chord-gtk/: Cargo.toml
chord-gtk/src/: main.rs  settings.rs  tab_bar.rs  terminal_pane.rs  window.rs
data/: org.lyraos.Chord.desktop  org.lyraos.Chord.metainfo.xml  palette.json
data/themes/: chord-dark.json
packaging/obs/: chord.spec
