[workspace]
resolver = "2"
members = [
    "chord-core",
    "chord-gtk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Lyra OS contributors"]
repository = "https://github.com/lyraos/chord"

[workspace.dependencies]
chord-core = { path = "chord-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
