[package]
name = "chord-gtk"
description = "Chord terminal emulator — GNOME (GTK4/VTE) frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "chord-gtk"
path = "src/main.rs"

[dependencies]
chord-core.workspace = true
glib = "0.22"
gio = "0.22"
gtk4 = { version = "0.11", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }
vte4 = { version = "0.10", features = ["gtk_v4_18", "v0_80"] }
libc = "0.2"
